--- a/public/common/Header.css
+++ b/public/common/Header.css
@@ -5,7 +5,7 @@ header {
     padding: 10px;
     justify-content: space-around;
     background: #f8f3f3;
-    border-bottom: 1px solid orange;
+    border-bottom: 1px solid rgb(75, 139, 104);
 }
 
 img.logo {
