--- a/public/todo/TodoApp.css
+++ b/public/todo/TodoApp.css
@@ -1,11 +1,12 @@
 main {
     position: relative;
-    max-width: 300px;
+    max-width: 350px;
     width: 100%;
     margin: auto;
     padding: 30px 20px;
     background: whitesmoke;
-    border: 1px solid #aaa;
+    border: 1px solid rgb(15, 34, 24);
+    border-radius: 10px; 
 }
 
 .error {
